# WebBrowserPy

./: .gitignore  pyproject.toml
src/scripts/: cli.py
src/webbrowser_py/: Browser.py  Constants.py  URL.py  __init__.py  utils.py
tests/: __init__.py
